--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-<body style="background-color: #2C2C2C; color: #ECECEC; height: 100vh;">
+<body style="background-color: #2C2C2C; color: #ECECEC; height: 100vh; display:flex; justify-content: center;">
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark justify-content-between" style="background-color: #1E1E1E;">
     <a class="navbar-brand" href="#">BookHub</a>
     <div class="ml-auto">
@@ -18,6 +18,10 @@
       <a class="btn btn-outline-success my-2 my-sm-0" href="/register">Register</a>
     </div>
   </nav>
+  <div class="container" style="font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, sans-serif; display: flex; flex-direction: column; justify-content: center; text-align: center;">
+    <h1>Descubra livros incríveis</h1>
+    <h6 style="color: #c0c0c0; font-size: smaller;">Explore nossa coleção e encontre sua proxima leitura favorita</h6>
+  </div>
 </body>
 
 </html>
