--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,13 +9,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body style="background-color: #2C2C2C; color: #ECECEC; height: 100vh;">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark justify-content-between" style="background-color: #1E1E1E;">
-    <a class="navbar-brand" href="/">BookHub</a>
-    <div class="ml-auto">
-      <a class="btn btn-outline-success my-2 my-sm-0" href="/login">Login</a>
-      <a class="btn btn-outline-success my-2 my-sm-0" href="/register">Register</a>
-    </div>
-  </nav>
+<%- include partials/navbarComponent %>
 <section class="vh-100">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
