--- a/views/descricao.ejs
+++ b/views/descricao.ejs
@@ -15,7 +15,7 @@
 
 <body
     style="background-color: #2C2C2C; color: #ECECEC; height: 100vh; display:flex; justify-content: center; flex-direction: column; font-family: Lucida Grande, Helvetica, Arial, sans-serif;">
-    <%- include partials/navbarComponent %>
+    <%- include('partials/navbarComponent', { user: user }) %>
         <div class="container">
             <div class="card" style="background-color: #232323;">
                 <div class="card-body d-flex">
@@ -29,20 +29,26 @@
                             <h2 class="box-title mt-5 font-weight-bold"><%- livro.titulo %></h2>
                             <h4 class="box-title text-muted mt-1"><%- livro.autor %></h4>
                             <button class="btn btn-primary btn-rounded mt-2">Adicionar aos favoritos</button>
-                            <button class="btn btn-primary btn-rounded mt-2">Ler agora</button>
-                            <% if (categorias && categorias.length> 0) { %>
-                                <h6 class="box-title text-muted mt-1">
-                                    <% categorias.forEach(function(cat, idx) { %>
-                                        <%= cat.nome %>
-                                            <%= idx < categorias.length - 1 ? ', ' : '' %>
-                                                <% }); %>
-                                </h6>
-                                <% } %>
-                                    <div class="text mt-5 w-75">
-                                        <h4>Descrição</h4>
-                                        <p class="text-muted "><%- livro.descricao %></p>
-                                    </div>
-                                    <div data-coreui-toggle="rating" data-coreui-value="3"></div>
+                            <% if (user) { %>
+                                <button class="btn btn-primary btn-rounded mt-2"
+                                    onclick="window.location.href='/leitura?id=<%= livro.id %>'">Ler agora</button>
+                                <% } else { %>
+                                    <button class="btn btn-primary btn-rounded mt-2"
+                                        onclick="window.location.href='/login'">Ler agora</button>
+                                    <% } %>
+                                        <% if (categorias && categorias.length> 0) { %>
+                                            <h6 class="box-title text-muted mt-1">
+                                                <% categorias.forEach(function(cat, idx) { %>
+                                                    <%= cat.nome %>
+                                                        <%= idx < categorias.length - 1 ? ', ' : '' %>
+                                                            <% }); %>
+                                            </h6>
+                                            <% } %>
+                                                <div class="text mt-5 w-75">
+                                                    <h4>Descrição</h4>
+                                                    <p class="text-muted "><%- livro.descricao %></p>
+                                                </div>
+                                                <div data-coreui-toggle="rating" data-coreui-value="3"></div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 rounded" style="background-color: #262626;">
                             <h4 class="mt-5">Comentários Recentes</h4>
@@ -55,10 +61,12 @@
                                         <% } else { %>
                                             <div class="text-muted">Nenhum comentário ainda.</div>
                                             <% } %>
-                                                <a href="/login" style="width: 30%;"">
+                                                <% if (!user) { %>
+                                                    <a href="/login" style="width: 30%;"">
                                                     <div class=" text-muted">Faça login para comentar
                         </div>
                         </a>
+                        <% } %>
                     </div>
                 </div>
             </div>
