--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body style="background-color: #2C2C2C; color: #ECECEC; height: 100vh;">
-  <%- include partials/navbarComponent %>
+  <%- include('partials/navbarComponent', { user: user }) %>
     <section class="vh-100">
       <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
