--- a/views/partials/navbarComponent.ejs
+++ b/views/partials/navbarComponent.ejs
@@ -1,8 +1,12 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark justify-content-between" style="background-color: #1E1E1E;">
-    <a class="navbar-brand" href="/">BookHub</a>
-    <div class="ml-auto">
-      <a class="btn btn-outline-success my-2 my-sm-0" href="/login">Login</a>
-      <a class="btn btn-outline-success my-2 my-sm-0" href="/register">Register</a>
-      <a class="btn btn-outline-success my-2 my-sm-0" href="/livros">Livros</a>
-    </div>
+  <a class="navbar-brand" href="/">BookHub</a>
+  <div class="ml-auto">
+    <% if (user) { %>
+      <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Logout</a>
+      <% } else { %>
+        <a class="btn btn-outline-success my-2 my-sm-0" href="/login">Login</a>
+        <% } %>
+          <a class="btn btn-outline-success my-2 my-sm-0" href="/register">Register</a>
+          <a class="btn btn-outline-success my-2 my-sm-0" href="/livros">Livros</a>
+  </div>
 </nav>
