--- a/views/partials/navbarComponent.ejs
+++ b/views/partials/navbarComponent.ejs
@@ -1,5 +1,8 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark justify-content-between" style="background-color: #1E1E1E;">
-  <a class="navbar-brand" href="/">BookHub</a>
+  <a class="navbar-brand d-flex align-items-center" href="/">
+    <img src="/images/logo.png" alt="Logo" width="40" height="40" class="mr-2 rounded">
+    BookHub
+  </a>
   <div class="ml-auto">
     <% if (user) { %>
       <a class="btn btn-outline-success my-2 my-sm-0" href="/logout">Logout</a>
@@ -8,5 +11,6 @@
         <% } %>
           <a class="btn btn-outline-success my-2 my-sm-0" href="/register">Register</a>
           <a class="btn btn-outline-success my-2 my-sm-0" href="/livros">Livros</a>
+          <a class="btn btn-outline-success my-2 my-sm-0" href="/favoritos">Favoritos</a>
   </div>
 </nav>
