ajustando responsabilidade das paginas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 <body
   style="background-color: #2C2C2C; color: #ECECEC; height: 100vh; display:flex; justify-content: center; font-family: Lucida Grande, Helvetica, Arial, sans-serif;">
   <%- include('partials/navbarComponent', { user: user }) %>
-    <div class="container d-flex flex-column align-items-center justify-content-center" style="max-width: fit-content;">
+    <div class="container d-flex flex-column align-items-center pt-5" style="max-width: fit-content;">
       <!-- Título e subtítulo centralizados -->
       <div class="text-center pt-3">
         <h1 class="fw-bold" style=" font-weight: bold;">DESCUBRA LIVROS INCRÍVEIS</h1>
