--- a/views/livros.ejs
+++ b/views/livros.ejs
@@ -12,11 +12,11 @@
 </head>
 
 <body
-  style="background-color: #2C2C2C; color: #ECECEC; height: 100vh; display:flex; justify-content: center; flex-direction: column; font-family: Lucida Grande, Helvetica, Arial, sans-serif;">
+  style="background-color: #2C2C2C; color: #ECECEC; flex-direction: column; font-family: Lucida Grande, Helvetica, Arial, sans-serif;">
 
   <%- include('partials/navbarComponent', { user: user }) %>
 
-    <div class="container d-flex justify-content-center">
+    <div class="container d-flex justify-content-center pt-5">
       <h1>Exploração de livros</h1>
     </div>
 
