--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -16,6 +16,46 @@
 <body
     style="background-color: #2C2C2C; color: #ECECEC; height: 100vh; display:flex; justify-content: center; flex-direction: column; font-family: Lucida Grande, Helvetica, Arial, sans-serif;">
     <%- include('partials/navbarComponent', { user: user }) %>
+        <div id="carouselFavoritos" class="carousel slide" data-ride="carousel"
+            style="max-width: 900px; margin: 0 auto;">
+            <div class="carousel-inner">
+                <% if (livrosFavoritos && livrosFavoritos.length> 0) {
+                    // Exibe 3 imagens por slide
+                    for (let i = 0; i < livrosFavoritos.length; i +=3) { %>
+                        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                            <div class="d-flex justify-content-center">
+                                <% for (let j=i; j < i + 3 && j < livrosFavoritos.length; j++) { const
+                                    livro=livrosFavoritos[j]; %>
+                                    <div class="mx-2">
+                                        <img src="<%= livro.capa_url %>" class="rounded" alt="<%= livro.titulo %>"
+                                            style="height: 300px; width: 200px; object-fit: cover;">
+                                        <div class="text-center mt-2" style="color: #ECECEC;">
+                                            <%= livro.titulo %>
+                                        </div>
+                                    </div>
+                                    <% } %>
+                            </div>
+                        </div>
+                        <% } } else { %>
+                            <div class="carousel-item active">
+                                <div class="text-center text-muted py-5">Nenhum favorito encontrado.</div>
+                            </div>
+                            <% } %>
+            </div>
+            <a class="carousel-control-prev" href="#carouselFavoritos" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselFavoritos" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
+            </a>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
