--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -31,6 +31,10 @@
                                             style="height: 300px; width: 200px; object-fit: cover;">
                                         <div class="text-center mt-2" style="color: #ECECEC;">
                                             <%= livro.titulo %>
+                                                <button class="btn btn-link p-0 star-btn"
+                                                    data-livro-id="<%= livro.id %>">
+                                                    <i class="bi bi-star-fill"></i>
+                                                </button>
                                         </div>
                                     </div>
                                     <% } %>
@@ -56,6 +60,22 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             crossorigin="anonymous"></script>
+        <script>
+            document.querySelectorAll('.star-btn').forEach(btn => {
+                btn.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const livroId = this.getAttribute('data-livro-id');
+                    fetch(`/addFavorito?id=${livroId}`)
+                        .then(res => res.json())
+                        .then(data => {
+                            window.location.reload();
+                        })
+                        .catch(err => {
+                            alert('Erro ao favoritar: ' + err);
+                        });
+                });
+            });
+        </script>
 </body>
 
 </html>
