Começando parte ADM do site, dashboard e pagina para editar e excluir livros funcionando.

--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -43,16 +43,9 @@
                             <div class="p-4 text-black bg-body-tertiary">
                                 <div class="d-flex justify-content-end text-center py-1" style="color: #B0B0B0;">
                                     <div>
-                                        <p class="mb-1 h5">253</p>
-                                        <p class="small text-muted mb-0">Photos</p>
-                                    </div>
-                                    <div class="px-3">
-                                        <p class="mb-1 h5">1026</p>
-                                        <p class="small text-muted mb-0">Followers</p>
-                                    </div>
-                                    <div>
-                                        <p class="mb-1 h5">478</p>
-                                        <p class="small text-muted mb-0">Following</p>
+                                        <p class="mb-1 h5">Data de registro</p>
+                                        <p class="small text-muted mb-0"><%- new
+                                                Date(user.data_registro).toLocaleDateString('pt-BR') %></p>
                                     </div>
                                 </div>
                             </div>
