Tela de admUsers feita só falta funcionar exclusao e promover user para adm

--- a/views/admin/partials/navbarAdmComponent.ejs
+++ b/views/admin/partials/navbarAdmComponent.ejs
@@ -9,5 +9,6 @@
         <a class="btn btn-outline-primary my-2 my-sm-0" href="/admin/dashboard">Dashboard</a>
         <a class="btn btn-outline-primary my-2 my-sm-0" href="/admin/admLivros">Livros</a>
         <a class="btn btn-outline-primary my-2 my-sm-0" href="/admin/admCategoria">Categoria</a>
+        <a class="btn btn-outline-primary my-2 my-sm-0" href="/admin/admUser">Usuários</a>
     </div>
 </nav>
